fdo#60120 Modify DialControl to store 100th degree angle.

DialControl internally stores the angle to a 100th of a degree
percision, but when SetRotation is called, the value was always
rounded to a 1 degree percision. This has now been modified to
round only on DialControl mouse interaction.

Additionally add add a parameter to SetLinkedField which states
the number of decimal places the NumericField is set to. This change
makes possible to set the NumericField to 100th of a Degree as the
internal angle is represented in. Default value is 0, so no change is
needed to existing DialControls.

Change-Id: I1f0c20092cdfccbd0878d7eb620bfdad7825b0fb